--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-postcss-modules": "^2.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
